# learn_CV

./: README.md
neural_network/basic/: basic.py  basic_master.py  testing.py
neural_network/finger_2/: labels_64x64_gray.npy  preprocess.py
neural_network/first/: first_nn_data.csv  first_nn_data_1.csv  train.py  weights_1.h5
neural_network/gate/: labels.npy  labels_gate_final.npy  model.json  np_test.py  test_cnn_bbox.py  train_cnn_bbox.py
opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  arjun_test.py  camera  camera.cpp  canny.py  cascade _25.xml  cascade.xml  clahe.py  cmake_install.cmake  con_vid  contour  contour.cpp  contour_video.cpp  hist_equ.py  object_detect  object_detect.cpp  remove_blue_channel.py  test  trackbar  trackbar.cpp  video  video.cpp
opencv/Python_Code/: calibrate.py  camera.py  camera_calib.py  depth.py  eraser_detect.py  filter.py  gate.py  gate_2.py  gate_3.py  hsv.py  orb_1.py  orb_match.py  trackbar.py
opencv/filters/: CMakeLists.txt  Makefile  filter_1  filter_1.cpp
opencv/motion/: contour.py  motion_tracking_test_1.py  orb_match.py  output.avi  test.py
opencv_2/: bg_sub_avg.py  gate_4.py  gen_bg_sub.py  trimap.py
