cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( object_detect object_detect.cpp )
add_executable( trackbar trackbar.cpp )
add_executable( contour contour.cpp )
add_executable( video video.cpp )
add_executable( con_vid contour_video.cpp )
add_executable( camera camera.cpp )
target_link_libraries( object_detect ${OpenCV_LIBS} )
target_link_libraries( trackbar ${OpenCV_LIBS} )
target_link_libraries( contour ${OpenCV_LIBS} )
target_link_libraries( video ${OpenCV_LIBS} )
target_link_libraries( con_vid ${OpenCV_LIBS} )
target_link_libraries( camera ${OpenCV_LIBS} )
